--- a/site/css/main.css
+++ b/site/css/main.css
@@ -5,6 +5,26 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+@media only screen and (max-width:820px) {
+    .big-screen {
+        display: none;
+    }
+
+    .small-screen {
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 821px) {
+    .big-screen {
+        display: block;
+    }
+
+    .small-screen {
+        display: none;
+    }
+}
+
 div {
     display: inline-block;
 }
@@ -12,6 +32,11 @@ div {
 a {
     color: white;
     text-decoration: none;
+}
+
+nav a {
+    height: 100%;
+    width: 100%;
 }
 
 a:hover {
@@ -27,6 +52,92 @@ nav {
     align-items: center;
     justify-content: center;
 }
+
+.hamburger-container {
+    position: absolute;
+    left: 2vw;
+    width: 80%;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.hamburger-container input {
+    position: absolute;
+    opacity: 0;
+    z-index: 2;
+    width: 5vw;
+    height: 100%;
+    -webkit-touch-callout: none;
+    cursor: pointer;
+}
+
+.hamburger-line {
+    position: relative;
+    display: block;
+    margin-right: 0;
+    margin-bottom: .8vh;
+    height: .4vh;
+    width: 5vw;
+    background-color: white;
+    z-index: 1;
+    transform-origin: center;
+    transition: opacity 0.2s linear, translate 0.5s ease-out, rotate 0.5s ease-out, transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#hamburger-line-3 {
+    margin-bottom: 0;
+}
+
+.hamburger-menu {
+    width: 100%;
+    background-color: rgb(51, 51, 51);
+    padding-top: 18vh;
+    position: absolute;
+    top: -12vh;
+    left: -2vw;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1);
+} 
+
+.hamburger-menu li {
+    min-height: 5vh;
+    width: 100%;
+    text-align: center;
+    font-size: 1.4em;
+}
+
+.hamburger-container input:checked ~ .hamburger-menu {
+    transform: scale(1, 1);
+    opacity: 1;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2)
+}
+
+.hamburger-container input:checked ~ span:nth-child(2) {
+    transform: translate(0, 1.2vh) rotate(-45deg);
+}
+
+.hamburger-container input:checked ~ span:nth-child(3) {
+    transform: translateX(-10vw);
+}
+
+.hamburger-container input:checked ~ span:nth-child(4) {
+    transform: translate(0, -1.2vh) rotate(45deg);
+}
+
+.hamburger-social {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+.hamburger-social a {
+    font-size: .8em;
+}
+
 
 .small-logo {
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
@@ -75,8 +186,13 @@ ul li {
 
 .big-element {
     width: 50%;
-    height: 70vh;
+    height: 50%;
     float: left;
+}
+
+.big-element-title {
+    font-size: 1.8em;
+    text-align: center;
 }
 
 .small-element {
@@ -85,6 +201,7 @@ ul li {
     float: left;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 #se1 {
